--- a/src/components/package/style.css
+++ b/src/components/package/style.css
@@ -1,30 +1,38 @@
 .packageCard{
     background-color: #f0f0f0;
+    background-image: linear-gradient(to right, rgb(196, 241, 255), rgb(255, 255, 255));
     padding:10px;
     margin: 15px 0px 0px 0px;
     box-shadow: 0 0 7px rgba(0,0,0,0.3);
     float: left;
-    border: 3px solid transparent;
     box-sizing: border-box;
+    font-size:21px;
+}
+.packageTitle{
+  color:white;
+  padding:9px 9px 9px 15px;
+  margin: -10px -10px 9px -10px;
+  font-size:18px;
+}
+
+.offer-title{
+  background-color: #1300bd8f;
+}
+.normal-title{
+  background-color: #008da0;
 }
 
 .offer {
-    border-style: solid;
-    border-width: 3px;
-    border-image: 
-      linear-gradient(
-        to left, 
-        red, 
-        rgba(0, 0, 0, 0)
-      ) 1 5%;
-  }
+    background-color: skyblue;
+    background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(66, 154, 255));
+}
 
   .offerTag{
     background-image: url('off.png');
-    background-size:58px;
+    background-size:60px;
     background-repeat: no-repeat;
     background-attachment: relative;
-    background-position: right;
+    background-position: center;
     color:#fff;
     -webkit-text-stroke: 0px #000;
     line-height: 0.75;
@@ -108,4 +116,23 @@
   height: 65px;
   font-size: 25px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+}
+
+.regular_package_card{
+  background-color: #f0f0f0;
+  background-image: linear-gradient(to right, rgb(219, 219, 219), white);
+  color:#000;
+  padding: 15px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  font-size:large;
+  margin: 0px 10px 20px 10px;
+}
+
+.footer{
+  background-color: rgb(34, 34, 34);
+  clear:both;
+  margin-bottom:-12px;
+  color:white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
