--- a/src/components/package/style.css
+++ b/src/components/package/style.css
@@ -84,6 +84,7 @@
 
 .my_order_card{
   background-color: #f0f0f0;
+  background-image: linear-gradient(to right, rgb(251, 251, 251), rgb(219, 219, 219));
   padding: 15px;
   box-shadow: 0 0 10px rgba(0,0,0,0.4);
   font-size:large;
@@ -135,4 +136,74 @@
   color:white;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0,0,0,0.4);
+}
+
+.hovered_loading{
+  text-align: center;
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.445);
+  z-index:10;
+  padding-top:250px;
+  color:white;
+  font-size: large;
+}
+
+.fixedNotice{
+  background-color: rgb(255, 254, 182);
+  padding:10px;
+  font-size: large;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
+.page_title_box{
+  background: darkblue;
+  background-image: linear-gradient(to right, rgb(0, 3, 156), rgb(115, 243, 255));
+  color:white;
+  margin-top:-10px;
+  padding: 35px 0px 11px 0px;
+  text-shadow: 2px 2px 5px #000;
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  margin-bottom: 20px;
+}
+
+.welcomeMsg{
+  background-color: rgba(0, 0, 0, 0.63);
+  background-image: linear-gradient(to right, rgb(22, 22, 22), rgb(80, 80, 80));
+  color: white;
+  padding: 20px 20px 15px 20px;
+  margin-bottom: 15px;
+  border-bottom: 5px solid rgb(216, 202, 0);
+  font-size: small;
+}
+
+.db_card{
+  background-color: #dedede;
+  background-image: linear-gradient(to right, rgb(187, 225, 255), rgb(255, 255, 255));
+  padding:12px;
+  float:left;
+  width:48.5%;
+  border:0px solid gray;
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  border-radius:10px;
+  margin: 2px;
+}
+
+.actionBtn{
+  background-color: #f0f0f0;
+  text-decoration: none;
+  padding:20px;
+  border-radius: 5px;
+  font-size: large;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+  transition: 0.25s;
+  color:black;
+  font-weight: bold;
+}
+.actionBtn:hover{
+  background-color: #2c76ff;
+  color:white;
 }
