--- a/src/components/package/style.css
+++ b/src/components/package/style.css
@@ -268,3 +268,14 @@
   background-color: white;
   padding: 10px
 }
+
+.social{
+  color:gray;
+  font-size: 33px;
+  margin:5px;
+}
+
+.getInTouch{
+  padding: 5px;
+  background-color: #f0f0f0;
+}
